# wavelet-sat

./: CMakeLists.txt  LICENSE.txt  ProjectHome.md  WaveletSATConfig.cmake.in  benchmark.txt  test_perf.bat  test_query.bat  test_query.sh
ContourSpectrum3D/: CMakeLists.txt  ContourSpectrum3D.cpp
CudaDWT/: CMakeLists.txt  CudaDWT.cu  CudaDWT.h  MarkSegments_kernel.h  ProjToWavelet_kernel.h
MJO/: CMakeLists.txt  WaveletSAT_MJO_main.cpp
Ocean/: CMakeLists.txt  Vector2D.h  WaveletSAT_Ocean_main.cpp
SAT/: Base.h  CMakeLists.txt  IntegralHistogram.h  IntegralHistogramSDWT.h  IsotropicWaveletSAT.h  SimpleND.h  WaveletSAT.h
SATSepDWTViewer/: CMakeLists.txt  SATSepDWT.h  SATSepDWT3DView.cpp  SATSepDWT3DView.h  SATSepDWTHistView.cpp  SATSepDWTHistView.h  SATSepDWTPCPView.cpp  SATSepDWTPCPView.h  SATSepDWTQueryView.cpp  SATSepDWTQueryView.h  SATSepDWTViewer_main.cpp
SATSepDWTViewer2/: CMakeLists.txt  SATSepDWT3DView.cpp  SATSepDWT3DView.h  SATSepDWTBlock.cpp  SATSepDWTBlock.h  SATSepDWTBlockTree.h  SATSepDWTHistView.cpp  SATSepDWTHistView.h  SATSepDWTPCPView.cpp  SATSepDWTPCPView.h  SATSepDWTQuery.h  SATSepDWTQueryView.cpp  SATSepDWTQueryView.h  SATSepDWTViewer_main.cpp  ray_integral.frag  ray_integral.frag.h
SimpleND/: CMakeLists.txt  SimpleND.cpp
SimpleNDEncoder/: CMakeLists.txt  SimpleNDEncoder.cpp
SimpleNDQuery/: CMakeLists.txt  SimpleNDQuery.cpp
SimpleNDWithNrrd/: CMakeLists.txt  SimpleNDWithNrrd.cpp
TestDatatypePerf/: CMakeLists.txt  TestDatatypePerf.cpp
WaveletSAT/: Base.h  CMakeLists.txt  DWT.h  DecoderBase.h  Doxyfile  EncoderBase.h  HeaderBase.h  NetCDFBase.h  SATEncoder.h  SATFileDecoder.h  SATFileEncoder.h  SATFileNetCDF.h  SATSepDWTDecoder.h  SATSepDWTEncoder.h  SATSepDWTFile.h  SATSepDWTNetCDF.h  SATSepDWTOutOfCore.h  SatEncoder.h  SepDWTData.h  SepDWTDecoderPool.h  SepDWTEncoderPool.h  SepDWTHeader.h  SepDWTPool.h  SepDWTPoolBase.h  SimpleND.h  SimpleNDFile.h  WaveletSAT.dox  WaveletSATEncoder.h  WaveletSATGPUEncoder.h  gnuplot.h.in  mainpage.dox  utils.h
matlab/: script_create_4spheres.m  test_plot_histograms.m
python/: CMakeLists.txt  sat_dwt_decoder_py.cpp  script_get_time_coef_for_video.py  test_filtering.py  test_sat_dwt_decder.py  test_sat_dwt_decoder.py
